--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="logo-placeholder"></div>
-      <h1>Emily Piña</h1>
+      <h1>Freddy Cuenca</h1>
       <p class="tagline">Welcome to my research portfolio</p>
       <nav>
         <button id="planningBtn">Planning</button>
@@ -17,4 +17,5 @@
       </nav>
     </header>
     <script src="navigation.js"></script>
+
   </body>
